--- a/zappa_settings.json
+++ b/zappa_settings.json
@@ -1,6 +1,7 @@
 {
     "dev": {
         "app_function": "app.app",
+        "aws_region": "ap-northeast-2",
         "profile_name": null,
         "project_name": "hongit",
         "runtime": "python3.8",
